src/objects/OppRollupSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>settings for Opportunities and rollups</description>
    <fields>
        <fullName>Assume_Fiscal_Year_Starts_January__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Avoids an additional query in Opportunity Rollup code by assuming that the fiscal year starts in January.</inlineHelpText>
        <label>Assume Fiscal Year Starts in January</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opp_Rollup_Triggers__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Updates Opportunity totals whenever an Opportunity is inserted or updated, as long as capacity allows.</inlineHelpText>
        <label>Roll Up Opps in Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excluded_Account_Opp_Rectypes__c</fullName>
        <inlineHelpText>Opportunity Record Types to exclude from Organization rollups. Record Type names should be in a semicolon separated list.</inlineHelpText>
        <label>Opp Rectypes Excluded for Account Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Account_Opp_Types__c</fullName>
        <inlineHelpText>Opportunity Types to exclude from Organization rollups. Opportunity Types should be in a semicolon separated list.</inlineHelpText>
        <label>Opp Types Excluded for Account Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Contact_Opp_Rectypes__c</fullName>
        <inlineHelpText>Opportunity Record Types to exclude from Contact rollups. Record Type names should be in a semicolon separated list.</inlineHelpText>
        <label>Opp Rectypes Excluded for Contact Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Contact_Opp_Types__c</fullName>
        <inlineHelpText>Opportunity Types to exclude from Contact rollups. Opportunity Types should be in a semicolon separated list.</inlineHelpText>
        <label>Opp Types Excluded for Contact Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Grace_Period__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>Membership grace period in days. Determines how many days after membership expiration a contact&apos;s Membership Status is &quot;Grace Period&quot;.</inlineHelpText>
        <label>Membership Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Period__c</fullName>
        <defaultValue>365</defaultValue>
        <inlineHelpText>Length of membership in days. This setting determines the number of days after start date a membership lasts.</inlineHelpText>
        <label>Membership Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Record_Types__c</fullName>
        <defaultValue>&quot;Membership&quot;</defaultValue>
        <inlineHelpText>Name of record types, such as Membership, that you want to roll up separately from other types. Separate record type names with semicolons.</inlineHelpText>
        <label>Membership Record Type Names</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Renewal_Period__c</fullName>
        <defaultValue>30</defaultValue>
        <inlineHelpText>Membership renewal period in days. Determines how many days after membership expiration a member&apos;s origin is &quot;Renewal&quot; instead of &quot;Reacquire&quot;, and whether the start date should be set to the previous membership&apos;s expiration date.</inlineHelpText>
        <label>Membership Renewal Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Membership_Rolling_Start_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines whether auto membership dates should start when the previous membership expires. Expired members will have membership retroactively applied if they are within the Membership Renewal Period. If disabled, Start Date defaults to the Close Date.</inlineHelpText>
        <label>Membership Rolling Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opp_Gift_Role_Contact_Donor__c</fullName>
        <defaultValue>&quot;Donor&quot;</defaultValue>
        <inlineHelpText>Default primary Contact Role.</inlineHelpText>
        <label>Opp Gift Role Contact Donor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Gift_Role_Contact_HH_Donor__c</fullName>
        <defaultValue>&quot;Household Soft Credit&quot;</defaultValue>
        <inlineHelpText>Default Contact Role soft credit for Household Members of donors.</inlineHelpText>
        <label>Opp Gift Role Contact HH Donor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Gift_Role_Matching_Donor__c</fullName>
        <defaultValue>&quot;Donor - Corporate Match&quot;</defaultValue>
        <inlineHelpText>Default primary Contact Role for Matching gifts.</inlineHelpText>
        <label>Opp Gift Role Matching Donor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Gift_Role_Org_Donor__c</fullName>
        <defaultValue>&quot;Decision Maker&quot;</defaultValue>
        <inlineHelpText>Default primary Contact Role for Organization Opportunities.</inlineHelpText>
        <label>Opp Gift Role Org Donor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Name_Format_Monthly__c</fullName>
        <defaultValue>&quot;[payer] [mm]/[yyyy] [rectype]&quot;</defaultValue>
        <inlineHelpText>Format for automatic name for monthly opportunities. The following fields will be replaced: [payer], [rectype], [mm], [dd], [yyyy], [amount], [type], [stage]</inlineHelpText>
        <label>Opp Name Format - Monthly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Name_Format__c</fullName>
        <defaultValue>&quot;[payer] [yyyy] [recurring] [rectype]&quot;</defaultValue>
        <inlineHelpText>Format for automatic opportunity name. The following fields will be replaced: [payer], [rectype], [mm], [dd], [yyyy], [amount], [type], [stage], [recurring]</inlineHelpText>
        <label>Opp Name Format</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Record_Type_Contact_Gift__c</fullName>
        <defaultValue>&quot;Gift&quot;</defaultValue>
        <inlineHelpText>The default Opportunity Record Type for new Opportunities for a Contact.</inlineHelpText>
        <label>Opp Rectype Contact Gift</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Rectype_For_Tests_Default__c</fullName>
        <defaultValue>&quot;Gift&quot;</defaultValue>
        <inlineHelpText>The default Opportunity Record Type for Apex tests.</inlineHelpText>
        <label>Opp Rectype For Tests Default</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Rectype_For_Tests_Member__c</fullName>
        <defaultValue>&quot;Membership&quot;</defaultValue>
        <inlineHelpText>Opportunity Record Type for tests that involve membership.</inlineHelpText>
        <label>Opp Rectype For Tests Member</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Rectype_For_Tests_NonMember__c</fullName>
        <defaultValue>&quot;Gift&quot;</defaultValue>
        <inlineHelpText>The default Opportunity Record Type for tests do not involve Membership.</inlineHelpText>
        <label>Opp Rectype For Tests NonMember</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Rectypes_Excluded_New_Opp_Contact__c</fullName>
        <defaultValue>&quot;Grant&quot;</defaultValue>
        <inlineHelpText>Names of Opportunity Record Types to exclude in the New Opp Wizard for Contacts.</inlineHelpText>
        <label>Opp Rectypes Excluded New Opp Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Rectypes_Excluded_New_Opp_Org__c</fullName>
        <inlineHelpText>Names of Opportunity Record Types to exclude from the New Opp Wizard for Organizations. Enter a semicolon delimited list of Record Types.</inlineHelpText>
        <label>Opp Rectypes Excluded New Opp Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Rectypes_Excluded_New_Opp_Payments__c</fullName>
        <inlineHelpText>Names of Opportunity Record Types in the New Opp Wizard that do not want to have radio buttons displayed for single payment, pledge, or recurring donation.</inlineHelpText>
        <label>Opp Rectypes Excluded New Opp Payments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage_Closed_Lost__c</fullName>
        <defaultValue>&quot;Closed Lost&quot;</defaultValue>
        <inlineHelpText>Name of the Opportunity Stage corresponding to Close/Lost.</inlineHelpText>
        <label>Opp Stage Closed Lost</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage_Closed_Won__c</fullName>
        <defaultValue>&quot;Closed Won&quot;</defaultValue>
        <inlineHelpText>Name of the Opportunity Stage corresponding to Close/Won.</inlineHelpText>
        <label>Opp Stage Closed Won</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage_Default__c</fullName>
        <defaultValue>&quot;Prospecting&quot;</defaultValue>
        <inlineHelpText>Name of the default Opportunity Stage</inlineHelpText>
        <label>Opp Stage Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage_Pledged_Default__c</fullName>
        <defaultValue>&quot;Pledged&quot;</defaultValue>
        <inlineHelpText>The Opportunity Stage to use for Opportunities split into Payments created from the New Opp Wizard.</inlineHelpText>
        <label>Opp Stage Pledged Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage_Recurring_Default__c</fullName>
        <defaultValue>&quot;Recurring&quot;</defaultValue>
        <inlineHelpText>The default Stage to set on an Opportunity that is part of a Recurring Payment Profile, but has not yet been paid.</inlineHelpText>
        <label>Opp Stage Recurring Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Stage_Won_Not_Thanked__c</fullName>
        <defaultValue>&quot;Won, Not Thanked&quot;</defaultValue>
        <inlineHelpText>Name of the Opportunity State corresponding to Closed Won, but not yet Thanked.</inlineHelpText>
        <label>Opp Stage Won Not Thanked</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roll_Up_Opps_for_Default_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enables Opportunity rollups for the default (Individual) account. Disable this option if the Individual account has too many Opportunities for rollups to function - or over 5000 Opportunities..</inlineHelpText>
        <label>Roll Up Opps for Default Account</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity &amp; Rollup Settings</label>
</CustomObject>